dodajemy umowe o dzielo cz1

--- a/kadry/src/main/webapp/info/sub/info.xhtml
+++ b/kadry/src/main/webapp/info/sub/info.xhtml
@@ -447,7 +447,7 @@
                                 <h:outputText value="data"/>
                             </f:facet>
                             <h:outputText value="#{item111.datadodania}">
-                                <f:convertDateTime locale="pl" />
+                                <f:convertDateTime locale="pl" type="date" pattern="yyyy-MM-dd"/>
                             </h:outputText>
                         </p:column>
                         <p:column width="30" style="text-align: center;">
