--- a/kadry/src/main/webapp/pit4/sub/pit4.xhtml
+++ b/kadry/src/main/webapp/pit4/sub/pit4.xhtml
@@ -167,7 +167,7 @@
                         <h:outputText value="upo"/>
                     </f:facet>
                     <h:outputText value="#{itempity.dataupo}">
-                        <f:convertDateTime locale="pl"/>
+                        <f:convertDateTime locale="pl" type="date" pattern="yyyy-MM-dd"/>
                     </h:outputText>
                 </p:column>
                 <p:column width="300">
