--- a/kadry/src/main/webapp/admin/sub/dialog/dialog_czaspracy_nieobecnosci.xhtml
+++ b/kadry/src/main/webapp/admin/sub/dialog/dialog_czaspracy_nieobecnosci.xhtml
@@ -225,7 +225,7 @@
                                 <h:outputText value="data"/>
                             </f:facet>
                             <h:outputText value="#{itemNieob.datadodania}">
-                                <f:convertDateTime locale="pl" />
+                                <f:convertDateTime locale="pl" type="date" pattern="yyyy-MM-dd"/>
                             </h:outputText>
                         </p:column>
                     
