--- a/kadry/src/main/webapp/admin/sub/dialog/dialog_lista_plac_sub_oddelegowanie.xhtml
+++ b/kadry/src/main/webapp/admin/sub/dialog/dialog_lista_plac_sub_oddelegowanie.xhtml
@@ -165,7 +165,7 @@
                     <p:row>
                         <p:column>
                             <h:outputText value="#{itempasek.data}" rendered="#{itempasek.data ne null}">
-                                <f:convertDateTime locale="pl"/>
+                                <f:convertDateTime locale="pl" type="date" pattern="yyyy-MM-dd"/>
                             </h:outputText>
                         </p:column>
                         <p:column>
