--- a/kadry/src/main/webapp/pit/sub/pit.xhtml
+++ b/kadry/src/main/webapp/pit/sub/pit.xhtml
@@ -334,7 +334,7 @@
                         <h:outputText value="upo data"/>
                     </f:facet>
                     <h:outputText value="#{itempity11.dataupo}">
-                        <f:convertDateTime locale="pl"/>
+                        <f:convertDateTime locale="pl" type="date" pattern="yyyy-MM-dd"/>
                     </h:outputText>
                 </p:column>
                 <p:column width="50" style="text-align: center;">
