--- a/kadry/src/main/webapp/pracownikurlopy/sub/urlopy.xhtml
+++ b/kadry/src/main/webapp/pracownikurlopy/sub/urlopy.xhtml
@@ -29,7 +29,7 @@
                                 <h:outputText value="data"/>
                             </f:facet>
                             <h:outputText value="#{itemAngaz.datadodania}">
-                                <f:convertDateTime locale="pl" />
+                                <f:convertDateTime locale="pl" type="date" pattern="yyyy-MM-dd"/>
                             </h:outputText>
                         </p:column>
                         <p:column width="50" style="text-align: center;">
