--- a/kadry/src/main/webapp/umowa/sub/dane_etat.xhtml
+++ b/kadry/src/main/webapp/umowa/sub/dane_etat.xhtml
@@ -29,7 +29,7 @@
         <p:outputPanel>
             <p:panelGrid columns="2">
                 <h:form styleClass="formumowa" id="EtatListForm">
-                    <p:panel header="Wykaz historii etatów"  rendered="#{umowaView.rodzajumowy eq '1'}">
+                    <p:panel header="Wykaz historii etatów" >
                         <p:dataTable id="datalist" value="#{etatView.lista}" var="itemetat"
                                      selectionMode="single" selection="#{etatView.selectedlista}" sortBy="#{itemetat.dataod}"
                                      rowKey="#{itemetat.id}" emptyMessage="Składnik nie posiada zdefiniowanych zmiennych"
