--- a/kadry/src/main/webapp/parametry/index.xhtml
+++ b/kadry/src/main/webapp/parametry/index.xhtml
@@ -23,7 +23,7 @@
                         <p:menubar autoDisplay="true">
                             <p:menuitem icon="pi pi-sliders-h" value="parametry" style="width: 150px" action="Parametry"/>
                             <p:menuitem icon="pi pi-mobile" value="firmy" style="width: 150px" action="Firma"/>
-                            <p:menuitem icon="pi pi-cloud-download" value="historia" style="width: 150px" action="Historia"/>
+                            <!--                            <p:menuitem icon="pi pi-cloud-download" value="historia" style="width: 150px" action="Historia"/>-->
                             <p:menuitem icon="pi pi-calendar-plus" value="kalendarze" style="width: 150px" action="KalendarzeGlobalne"/>
                             <p:submenu icon="pi pi-users" label="pracownicy" style="width: 150px">
                                 <p:menuitem icon="pi pi-ellipsis-v" value="lista wszystkich prac." style="width: 150px" action="Pracownikwykaz"/>
