--- a/npkpir_23/web/wspolny/wspolnyjpkVAT.xhtml
+++ b/npkpir_23/web/wspolny/wspolnyjpkVAT.xhtml
@@ -209,7 +209,7 @@
                 <f:facet name="header">
                     <h:outputText value="usuń"/>
                 </f:facet>
-                <p:commandButton icon="fa fa-trash" onclick="PF('confirmation').show()" update="@form" global="false" rendered="#{item.code.toString().startsWith('4') or facesContext.externalContext.remoteUser eq '4' or facesContext.externalContext.remoteUser eq 'szef'}"/>
+                <p:commandButton icon="fa fa-trash" onclick="PF('confirmationJPK').show()" update="@form" global="false" rendered="#{item.code.toString().startsWith('4') or facesContext.externalContext.remoteUser eq '4' or facesContext.externalContext.remoteUser eq 'szef'}"/>
             </p:column>
             <p:rowExpansion>
                 <p:panelGrid columns="1">
