--- a/npkpir_23/web/ksiegowaFK/sub/dialog/dialog_deklaracje_vat.xhtml
+++ b/npkpir_23/web/ksiegowaFK/sub/dialog/dialog_deklaracje_vat.xhtml
@@ -10,7 +10,9 @@
               resizable="false" onShow="ustawdialogWindow('dialog_deklaracje_vat', 1350, 900);" closeOnEscape="true" onHide="resetujdialog('dialog_deklaracje_vat');"  >
         <p:ajax event="open" listener="#{vat7DKView.setFlaga(0)}" update="formdekl"/>
         <p:panel style="height: 850px;overflow-y: scroll">
-            <ui:include src="../../../wspolny/sub/vatPrzygotowanieDeklaracjiN.xhtml"/> 
+            <h:form id="formdekl">
+                <ui:include src="../../../wspolny/sub/vatPrzygotowanieDeklaracjiN.xhtml"/> 
+            </h:form>
         </p:panel>
     </p:dialog>
 </ui:composition>
