--- a/npkpir_23/web/ksiegowaFK/sub/dialog/dialog_deklaracje_vat_wysylka.xhtml
+++ b/npkpir_23/web/ksiegowaFK/sub/dialog/dialog_deklaracje_vat_wysylka.xhtml
@@ -8,10 +8,12 @@
 
     <p:dialog id="dialog_deklaracje_vat_wysylka" header="Wysyłanie deklaracji VAT" widgetVar="dialog_deklaracje_vat_wysylka"  appendTo="@(body)" modal="true"
               resizable="false" onShow="ustawdialogWindow('dialog_deklaracje_vat_wysylka', 1350, 700);" closeOnEscape="true" onHide="resetujdialog('dialog_deklaracje_vat_wysylka');"  >
-        <p:ajax event="open" listener="#{deklaracjevatView.init()}" update="formX akordeon formbutton zalacznikZZ zalacznikZT" />
-        <p:ajax event="open" listener="#{podpisView.sprawdzczymoznaFK(WpisView, deklaracjevatView.oczekujace)}" update="formX  akordeon formbutton" />
+        <p:ajax event="open" listener="#{deklaracjevatView.init()}" update="formX" />
+        <p:ajax event="open" listener="#{podpisView.sprawdzczymoznaFK(WpisView, deklaracjevatView.oczekujace)}" update="formX" />
         <p:panel style="height: 600px;overflow-y: scroll">
-            <ui:include src="../../../wspolny/sub/vatdowyslania.xhtml"/> 
+            <h:form id="formX">
+                <ui:include src="../../../wspolny/sub/vatdowyslania.xhtml"/> 
+            </h:form>
         </p:panel>
     </p:dialog>
 </ui:composition>
