--- a/kadry/src/main/webapp/admin/sub/dialog/dialog_lista_plac_sub_oddelegowanie.xhtml
+++ b/kadry/src/main/webapp/admin/sub/dialog/dialog_lista_plac_sub_oddelegowanie.xhtml
@@ -177,6 +177,9 @@
                         <p:column>
                             <h:outputText value="koszty uzyskania"/>
                         </p:column>
+                        <p:column>
+                            <h:outputText value="społeczne kierowca"/>
+                        </p:column>
 <!--                         <p:column>
                             <h:outputText value="ulga dla kl.sr"/>
                         </p:column>-->            <p:column>
@@ -226,10 +229,7 @@
                             <h:outputText value="kurs"/>
                             <bcf:outputkurs value="#{itempasek.kurs}"/>
                         </p:column>
-                        <p:column width="20" style="text-align: center;">
-                            <h:outputText value="#{indexpasek+1}"/>
-                            <h:outputText value="student" rendered="#{itempasek.kalendarzmiesiac.angaz.student}" style="color: #009688;"/>
-                        </p:column>
+                        
                     </p:row>
                     <p:row>
                         <p:column>
@@ -243,6 +243,9 @@
                         </p:column>
                         <p:column>
                             <bcf:outputpl value="#{itempasek.kosztyuzyskania}"/>
+                        </p:column>
+                        <p:column>
+                            <bcf:outputpl value="#{itempasek.spolecznedoodliczeniakierowca}"/>
                         </p:column>
 <!--                         <p:column>
                             <bcf:outputpl value="#{itempasek.ulgadlaklasysredniejSuma}"/>
@@ -290,6 +293,8 @@
                             <bcf:outputpl value="#{itempasek.nettowaluta}" />
                         </p:column>
                         <p:column width="20" style="text-align: center;">
+                            <h:outputText value="#{indexpasek+1}"/>
+                            <h:outputText value="student" rendered="#{itempasek.kalendarzmiesiac.angaz.student}" style="color: #009688;"/>
                             <p:commandButton icon="pi pi-trash" actionListener="#{pasekwynagrodzenView.usun(itempasek)}" global="false" update="NieobecnoscListForm DefinicjalistaplacCreateForm2 PasekwynagrodzenListForm:datalist RachunekZleceniaForm"/>
                         </p:column>
                     </p:row>
