--- a/kadry/src/main/webapp/umowa/sub/dane_umowa_praca.xhtml
+++ b/kadry/src/main/webapp/umowa/sub/dane_umowa_praca.xhtml
@@ -118,7 +118,7 @@
                          <f:facet name="header">
                             <h:outputText value="edy."/>
                         </f:facet>
-                        <p:commandButton icon="pi pi-pencil" actionListener="#{umowaView.edytuj(itemumowa)}" update="north, @(.formumowa)"/>
+                        <p:commandButton icon="pi pi-pencil" actionListener="#{umowaView.edytuj(itemumowa)}" update="north akordeon @(.formumowa)"/>
                     </p:column>
                     <p:column width="40" style="text-align: center;">
                          <f:facet name="header">
